force-app/main/default/objects/Round_Robin_Pool__c/Round_Robin_Pool__c.object-meta.xml
<CustomObject>
    <label>Round Robin Pool</label>
    <nameField>
        <displayFormat>Round Robin {0000}</displayFormat>
        <label>Round Robin Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>