force-app/main/default/objects/Round_Robin_Pool__c/fields/Assigned_Weight__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Weight__c</fullName>
    <label>Assigned Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>