force-app/main/default/objects/Round_Robin_Pool__c/fields/Max_Weight__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight__c</fullName>
    <label>Max Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>