force-app/main/default/objects/Round_Robin_Pool__c/fields/Maximum_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Weightage__c</fullName>
    <label>Maximum Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>