force-app/main/default/objects/Round_Robin_Pool__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>