force-app/main/default/objects/Round_Robin_Pool__c/fields/Total_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Total_Assigned__c</fullName>
    <label>Total Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>