force-app/main/default/objects/Round_Robin_Pool__c/listViews/Ahmedabad_Bucket_1_CMA_Round_Robin.listView-meta.xml
<ListView>
    <fullName>Ahmedabad_Bucket_1_CMA_Round_Robin</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Maximum_Weightage__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>Max_Leads__c</columns>
    <columns>City__c</columns>
    <columns>Course__c</columns>
    <columns>Bucket__c</columns>
    <columns>Type__c</columns>
    <columns>Object_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Ahmedabad</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Round Robin</value>
    </filters>
    <filters>
        <field>Bucket__c</field>
        <operation>equals</operation>
        <value>Bucket 1</value>
    </filters>
    <label>Ahmedabad- Bucket 1- CMA - Round Robin</label>
</ListView>