force-app/main/default/objects/Round_Robin_Pool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Maximum_Weightage__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>City__c</columns>
    <columns>Bucket__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>Max_Leads__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Course_Bucket__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>