force-app/main/default/objects/Round_Robin_Pool__c/listViews/Delhi_Advertisement.listView-meta.xml
<ListView>
    <fullName>Delhi_Advertisement</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Maximum_Weightage__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>Max_Leads__c</columns>
    <columns>City__c</columns>
    <columns>Lead_Source__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>Advertisement</value>
    </filters>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Delhi</value>
    </filters>
    <label>Delhi- Advertisement</label>
</ListView>