force-app/main/default/objects/Round_Robin_Pool__c/listViews/Delhi_Course_Enrolled.listView-meta.xml
<ListView>
    <fullName>Delhi_Course_Enrolled</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>City__c</columns>
    <columns>Course__c</columns>
    <columns>Type__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Course_Bucket__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Api_Name__c</field>
        <operation>equals</operation>
        <value>Course_Enrolled__c</value>
    </filters>
    <label>Delhi - Course Enrolled</label>
</ListView>