force-app/main/default/objects/Round_Robin_Pool__c/listViews/Delhi_FaceBook.listView-meta.xml
<ListView>
    <fullName>Delhi_FaceBook</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>City__c</columns>
    <columns>Course__c</columns>
    <columns>Type__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Course_Bucket__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Delhi</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Round Robin</value>
    </filters>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>Advertisement</value>
    </filters>
    <filters>
        <field>Course_Bucket__c</field>
        <operation>equals</operation>
        <value>Accounting Vertical</value>
    </filters>
    <label>Delhi - CMA- Advertisement- Round Robin</label>
</ListView>