force-app/main/default/objects/Round_Robin_Pool__c/listViews/Kolkata_Bucket_1_CMA_Round_Robin.listView-meta.xml
<ListView>
    <fullName>Kolkata_Bucket_1_CMA_Round_Robin</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>City__c</columns>
    <columns>Course_Bucket__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Type__c</columns>
    <columns>Object_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Kolkata</value>
    </filters>
    <label>Kolkata - Facebook  - Accounting RR</label>
</ListView>