force-app/main/default/objects/Round_Robin_Pool__c/listViews/Kolkata_CMA_Eligibility_Criteria.listView-meta.xml
<ListView>
    <fullName>Kolkata_CMA_Eligibility_Criteria</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>City__c</columns>
    <columns>Course__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Bucket__c</columns>
    <columns>Type__c</columns>
    <columns>Object_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
        <value>Kolkata</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Eligibility Criteria</value>
    </filters>
    <label>Kolkata - CMA - Eligibility Criteria</label>
</ListView>