force-app/main/default/objects/Round_Robin_Pool__c/listViews/MCOM.listView-meta.xml
<ListView>
    <fullName>MCOM</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sequence__c</columns>
    <columns>Maximum_Weightage__c</columns>
    <columns>Total_Assigned__c</columns>
    <columns>Assigned_Weight__c</columns>
    <columns>Current_Assigned_Weight__c</columns>
    <columns>Max_Leads__c</columns>
    <columns>City__c</columns>
    <columns>Course__c</columns>
    <columns>Bucket__c</columns>
    <columns>Type__c</columns>
    <columns>Object_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>MCOM</value>
    </filters>
    <label>MCOM</label>
</ListView>